--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <HTML>
 <head>
 	<title>Calculator</title>
-              <link href="C:/Users/ROHITH/Desktop/pro/bootstrap3/css/bootstrap.css" rel="stylesheet" />
-	<link href="C:/Users/ROHITH/Desktop/pro/assets/css/gsdk.css" rel="stylesheet" />
-             <link href="C:/Users/ROHITH/Desktop/pro/assets/css/demo.css" rel="stylesheet" />
-          <link href="C:/Users/ROHITH/Desktop/pro/maincss.css" rel="stylesheet" />
+              <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
+	<link href="assets/css/gsdk.css" rel="stylesheet" />
+             <link href="assets/css/demo.css" rel="stylesheet" />
+          <link href="maincss.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
-    <link href="C:/Users/ROHITH/Desktop/pro/bootstrap3/css/font-awesome.css" rel="stylesheet" />
+    <link href="bootstrap3/css/font-awesome.css" rel="stylesheet" />
 	<script type="text/javascript">
 		function add(){
 			var a=parseInt(document.getElementById("number1").value);
