--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		}
 		function pow1(){
 			var a=parseInt(document.getElementById("number1").value);
-			var x=Math.pow(a,a);
+			var x=Math.pow(a,2);
 			document.getElementById("result").innerHTML=x;
 			return false;
 		}
