--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype HTML>
 <HTML>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
-              <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
+        <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
 	<link href="assets/css/gsdk.css" rel="stylesheet" />
-             <link href="assets/css/demo.css" rel="stylesheet" />
-          <link href="maincss.css" rel="stylesheet" />
+        <link href="assets/css/demo.css" rel="stylesheet" />
+        <link href="maincss.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="bootstrap3/css/font-awesome.css" rel="stylesheet" />
