--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
-	<link rel="icon" href="/calc.ico" type="image/x-icon">
+	<link rel="icon" href="calc.ico" type="image/x-icon">
         <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
 	<link href="assets/css/gsdk.css" rel="stylesheet" />
         <link href="assets/css/demo.css" rel="stylesheet" />
