--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
-	<link rel="fluid-icon" href="calc.ico" title="calc">
+	<link rel="icon" href="calc.ico" type="image/x-icon">
         <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
 	<link href="assets/css/gsdk.css" rel="stylesheet" />
         <link href="assets/css/demo.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<h2>Calculator</h2>
-	<table>
+	<table id="tab1">
 		<tr>
 			<td>Number 1:</td>
 			<td><input type="text" title="x" placeholder="Enter a number" id="number1" required="required">
@@ -33,7 +33,7 @@
 			<td><textarea id="result" rows="2" cols="20"></textarea></td>
 		</tr>
 	</table>
-	<table>
+	<table id="tab2">
     	<tr>
     		<td id="a"><input type="submit" id="add" title="addition" value="+" onclick="add()" /></td>
     		<td id="a"><input type="submit" id="sub" title="subtraction" value="-" onclick="sub()"/></td>
@@ -50,11 +50,14 @@
     		<td id="a"><input type="submit" id="fact" value="x!" title="Factorial of x" onclick="fact()"/></td>
     	</tr>
     </table>
-    <table><tr>
+    <table id="tab3">
+   <tr>
   <div class="row">
   	<td><div class="column" onclick="openTab('b1');" style="background:aqua;">Trignometric</div></td>
-  </div></tr>
- <tr><td>
+  </div>
+</tr>
+ <tr>
+  <td>
     	<div id="b1" class="containerTab" style="display:none;background:green">
     		<span onclick="this.parentElement.style.display='none'" class="closebtn">x</span>
     		<input type="submit" id="sin" title="sin of x" value="sin(x)" onclick="sin()"/>
@@ -65,7 +68,8 @@
     	    <input type="submit" id="tan" title="tan of x" value="tan(x)" onclick="tan()"/>
     		<input type="submit" id="atan" title="tan inverse of x" value="atan(x)" onclick="atan()"/>
         </div>
-  </td></tr>
+  </td>
+</tr>
   </table>
 
 
