--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<h2>Calculator</h2>
-	<table id="tab1">
+	<table id="tab1" align="center">
 		<tr>
 			<td>Number 1:</td>
 			<td><input type="text" title="x" placeholder="Enter a number" id="number1" required="required">
@@ -33,7 +33,7 @@
 			<td><textarea id="result" rows="2" cols="20"></textarea></td>
 		</tr>
 	</table>
-	<table id="tab2">
+	<table id="tab2" align="center">
     	<tr>
     		<td id="a"><input type="submit" id="add" title="addition" value="+" onclick="add()" /></td>
     		<td id="a"><input type="submit" id="sub" title="subtraction" value="-" onclick="sub()"/></td>
@@ -50,7 +50,7 @@
     		<td id="a"><input type="submit" id="fact" value="x!" title="Factorial of x" onclick="fact()"/></td>
     	</tr>
     </table>
-    <table id="tab3">
+    <table id="tab3" align="center">
    <tr>
   <div class="row">
   	<td><div class="column" onclick="openTab('b1');" style="background:aqua;">Trignometric</div></td>
