--- a/calc-beta/index.html
+++ b/calc-beta/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Calc+</title>
 	<script type="text/javascript" src="script1.js"></script>
     <link href="maincss1.css" rel="stylesheet" />
     <link rel="icon" href="1.png" type="image/png">
