--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <td><input type="submit" id="a" title="Squareroot of x" value="sqrt(x)" onclick="sqrt()"/></td>
             <td><input type="submit" id="a" value="x!" title="Factorial of x" onclick="fact()"/></td>
         </tr>
+		<tr>
+
+            <td ><input type="submit" id="a" title="log(x)" value="log(x)" onclick="log()"/> </td>
+
+            <td><input type="submit" id="a" title="e^x" value="e^x" onclick="exp()"/></td>
+
+            <td><input type="submit" id="a" title="cos of x" value="cos(x)" onclick="cos()"/></td>
+
+            
+
+        </tr>
         <tr>
             <td ><input type="submit" id="a" title="sin of x" value="sin(x)" onclick="sin()"/> </td>
             <td><input type="submit" id="a" title="sin inverse of x" value="asin(x)" onclick="asin()"/></td>
