--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <td><input type="submit" id="a" title="e^x" value="e^x" onclick="exp()"/></td>
 
-            <td><input type="submit" id="a" title="cos of x" value="cos(x)" onclick="cos()"/></td>
+            <td><input type="submit" id="a" title="ln(x)" value="ln(x)" onclick="ln()"/></td>
 
             
 
