--- a/calc-beta/index.html
+++ b/calc-beta/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 	<h2> Calculator</h2>
+	<audio id="aud">
+		<source src="https://youtu.be/ib39H_Ljjk0?t=23" type="audio/mpeg">
+	</audio>
 	<table align="center">
 		<tr>
 			<td colspan="4"><input type="text" id="result" size="28" /></td>
@@ -43,7 +46,7 @@
 		<tr>
 			<td><input type="button" id="a1" value="." onclick="add('.')"/> </td>
 			<td><input type="button" id="a" value="0" onclick="add('0')"/> </td>
-			<td><button id="b" onclick="document.location='https://rohith-karra.github.io/calc/'">>></button></td>
+			<td><button id="b" onclick="play()">>></button></td>
 			<td><input type="button" id="b1" value="=" onclick="solve()"/> </td>
 			
 		</tr>
