--- a/calc-beta/index.html
+++ b/calc-beta/index.html
@@ -12,7 +12,7 @@
 <body>
 	<h2> Calculator</h2>
 	<audio id="aud">
-		<source src="https://gaana.com/song/kadasaridi-veedkolu" type="audio/mpeg">
+		<source src="kada.mp3" type="audio/mpeg">
 	</audio>
 	<table align="center">
 		<tr>
