--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!doctype HTML>
-<HTML>
+<!DOCTYPE html>
+<html>
 <head>
+<meta charset="ISO-8859-1">
+<title>Calculator</title>
+
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +12,60 @@
 	<link rel="icon" href="calc.ico" type="image/x-icon">
         <link href="maincss.css" rel="stylesheet" />
 	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
+
+	<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
-<body>
-	<h2>Calculator</h2>
-	   <table align="center">
+<style>
+  
+    body{
+    background-color:Aqua; 
+ }
+ h2{
+     text-align: center;
+     color: black;
+     font-family: cursive;
+     padding-top: 5px;
+     padding-bottom: 5px;
+
+ }
+ 	table{
+            border: 1px solid;
+        }
+
+ #a{
+            background-color:#aec0d3;
+            color: black;
+            border:1.5px solid #a2bbd4;
+            height:50px;
+            width:60px;
+            border-radius: 3px;
+            padding: 5px 0px;
+ }
+
+#a:hover{
+    background-color: white;
+}
+
+</style>
+<body
+	style="background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
+<div class="container">
+		<div class="row mt-3">
+			<div class="col-md-4 offset-md-4">
+				<div class="card">
+					<div class="card-header text-center bg-info text-white">
+					
+						<h5>Calculator</h5>
+					</div>
+					<div class="card-body">
+	
+ <table align="center">
         <tr>
             <td colspan="3"><input type="text" colspan="3" placeholder="Enter a number" id="number1" size="22" required="required"></td>
         </tr>
@@ -45,6 +99,12 @@
             <td><input type="submit" id="a" title="tan of x" value="tan(x)" onclick="tan()"/></td>
             <td ><input type="submit" id="a" title="tan inverse of x" value="atan(x)" onclick="atan()"/></td>
         </tr>
+</table>
 
+</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-</HTML>
+</html>
