--- a/calc-beta/index.html
+++ b/calc-beta/index.html
@@ -112,8 +112,8 @@
             }
 
 </style>
-<body
-      <div class="header">
+<body style="background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
+<div class="header">
             <a href="#default" class="logo">WordWizard</a>
             <div class="header-right">
                 <a class="active" href="https://rohith-karra.github.io/randomwords/">Home</a>
@@ -121,8 +121,7 @@
                 <a href="#about">About</a>
             </div>
         </div>
-	style="background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
-<div class="container">
+	<div class="container">
 		<div class="row mt-3">
 			<div class="col-md-4 offset-md-4">
 				<div class="card">
