--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </style>
 <body style="background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
 <div class="header">
-            <a href="#default" class="logo">WordWizard</a>
+            <a href="#default" class="logo">calc+</a>
             <div class="header-right">
                 <a class="active" href="https://rohith-karra.github.io/randomwords/">Home</a>
                 <a href="https://rohith-karra.github.io/calc/calc-beta/">Calc+</a>
