--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="header">
             <a href="#default" class="logo">calc+</a>
             <div class="header-right">
-                <a class="active" href="#">Home</a>
+                <a class="active" href="https://word-wizard.herokuapp.com/">Home</a>
                 <a href="https://rohith-karra.github.io/calc/calc-beta/">Calc+</a>
                 <a href="#about">About</a>
             </div>
