--- a/convo/index.html
+++ b/convo/index.html
@@ -25,13 +25,12 @@
     <table align="center">
         <br><br>
         <tr>
-            <td colspan="3"><input type="text" colspan="3" placeholder="Enter a number" id="curr" size="30" required="required"></td>
+            <td colspan="3"><input type="text" colspan="3" placeholder="Enter Weight in KG" id="weight" size="30" required="required"></td>
+            <td colspan="3"><input type="text" colspan="3" placeholder="Enter height in cm" id="height" size="30" required="required"></td>
         </tr>
 
     <tr>
-    <td><input type="button" id="a" value="pound" onclick="convo()"></td>
-    <td><input type="button" id="a" value="US Dollar" onclick="convo1()"></td>
-    <td><input type="button" id="a" value="AUS Dollar" onclick="convo2()"></td>
+    <td><input type="button" id="a" value="Submit" onclick="convo()"></td>
     </tr>
 
     <tr>
