--- a/calc-beta/index.html
+++ b/calc-beta/index.html
@@ -77,10 +77,10 @@
 </style>
 <body style="background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
 <div class="header">
-            <a href="#default" class="logo">Home</a>
+            <a href="#default" class="logo">Calc+</a>
             <div class="header-right">
-                <a class="active" href="https://rohith-karra.github.io/calc/calc-beta/">Home</a>
-                <a href="https://rohith-karra.github.io/calc/">Calc+</a>
+                <a class="active" href="https://rohith-karra.github.io/calc/">Home</a>
+                <a href="https://rohith-karra.github.io/calc/calc-beta/">Calc+</a>
                 <a href="https://rohith-karra.github.io/calc/convo/">Health</a>
             </div>
         </div>
