--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<tr>
 			<td><input type="button" id="a1" value="." onclick="add('.')"/> </td>
 			<td><input type="button" id="a" value="0" onclick="add('0')"/> </td>
-			<td><button id="b" onclick="document.location='https://rohith-karra.github.io/calc/'">>></button></td>
+			<td><button id="b" onclick="document.location='https://rohith-karra.github.io/calc/calc-beta'">>></button></td>
 			<td><input type="button" id="b1" value="=" onclick="solve()"/> </td>
 			
 		</tr>
