--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="header-right">
                 <a class="active" href="https://rohith-karra.github.io/calc/">Home</a>
                 <a href="https://rohith-karra.github.io/calc/calc-beta/">Calc+</a>
-                <a href="https://rohith-karra.github.io/calc/convo/">Curr</a>
+                <a href="https://rohith-karra.github.io/calc/convo/">Health</a>
             </div>
         </div>
 	<div class="container">
