--- a/convo/index.html
+++ b/convo/index.html
@@ -11,7 +11,7 @@
 	<title>Calculator</title>
 	<link rel="icon" href="calc.ico" type="image/x-icon">
         <link href="maincss.css" rel="stylesheet" />
-	<script type="text/javascript" src="currency.js"></script>
+	<script type="text/javascript" src="bmi.js"></script>
 	<link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
