--- a/convo/index.html
+++ b/convo/index.html
@@ -107,6 +107,9 @@
 		<tr>
             <td colspan="3"><input type="text" id="res" size="30" required="required"></td>
         </tr>
+        <tr>
+            <td colspan="3"><input type="text" id="status" size="40" required="required"></td>
+        </tr>
       
       
 </table>
