--- a/convo/index.html
+++ b/convo/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Calculator</title>
+	<title>BMI Calculator</title>
 	<link rel="icon" href="calc.ico" type="image/x-icon">
         <link href="maincss.css" rel="stylesheet" />
 	<script type="text/javascript" src="bmi.js"></script>
