--- a/convo/index.html
+++ b/convo/index.html
@@ -90,7 +90,7 @@
 				<div class="card">
 					<div class="card-header text-center bg-info text-white">
 					
-						<h5>Calculator</h5>
+						<h5>BMI Calculator</h5>
 					</div>
 					<div class="card-body">
 	
